# MILO

./: .gitignore  .mcp.json  README.md  SECURITY.md  hello_wasi.c
.cursor/: project.md
.cursor/rules/: lial-project.mdc  milo-project.mdc  update-changelog.mdc
.github/workflows/: build-receiver.yml  deploy.yml  publish-manifest.yml
demos/: charts.py  drivers.py  factory_demo.py  fleet.py  llm.py  swarm_demo.py
demos/evidence/: factory_events.json  factory_llm_diagnosis.txt  factory_llm_jam_diagnosis.txt  factory_llm_oven_fix.rs  factory_telemetry.jsonl  factory_transcript.txt  swarm_events.json  swarm_llm_driver.rs  swarm_telemetry.jsonl  swarm_transcript.txt
docs/: PORTING.md  PROJECT_WALKTHROUGH.md  changelog.md  milo-guide.html
docs/blog/: evidence.md  linkedin-post.md  medium-post-industry-ready.md
docs/review/: 2026-07-audit.md
docs/site/: index.html
docs/week1/: actionPlan.md  changelog.md  currentStatus.md
docs/week2/: actionPlan.md  changelog.md  currentStatus.md  plan.md
docs/week3/: WEEK3_IMPLEMENTATION.md  context.md  plan.md  research.md
docs/week3/misc/: buildplan.md
examples/: mock_driver.c
examples/mock_driver/: Cargo.toml
examples/mock_driver/src/: lib.rs
examples/test_drivers/adc_read/: Cargo.toml
examples/test_drivers/adc_read/src/: lib.rs
examples/test_drivers/blink_led/: Cargo.toml
examples/test_drivers/blink_led/src/: lib.rs
examples/test_drivers/infinite_loop/: Cargo.toml
examples/test_drivers/infinite_loop/src/: lib.rs
examples/test_drivers/no_export/: Cargo.toml
examples/test_drivers/no_export/src/: lib.rs
examples/test_drivers/pwm_fade/: Cargo.toml
examples/test_drivers/pwm_fade/.cargo/: config.toml
examples/test_drivers/pwm_fade/src/: lib.rs
examples/test_drivers/uart_loopback/: Cargo.toml
examples/test_drivers/uart_loopback/src/: lib.rs
host/: cli.py  requirements.txt
host/core/: compiler.py  keygen_cmd.py  signing.py  transport.py
host/devices/: boards.py  device.py  discovery.py  registry.py
host/flash/: __init__.py  download.py  init_cmd.py  rp2040.py
host/hil/: runner.py  test_adc.py  test_gpio.py  test_pwm.py  test_uart.py
host/mcp/: README.md  server.py
host/tests/: conftest.py  test_board_registry.py  test_download.py  test_flash_backends.py  test_generate_manifest.py  test_init_flow.py  test_mcp_server.py  test_signing.py  test_sim_fleet.py
host/tools/: serial_push.py
lial-host/: board_registry.py  device_registry.py  discovery.py  hil_test.py  lial_cli.py  lial_compiler.py  lial_device.py  lial_host.py  mcp_server.py  requirements.txt  serial_push.py  transport.py
lial-host/flash_backends/: __init__.py  avr.py  esp32.py  rp2040.py  stm32.py
lial-host/hil_tests/: __init__.py  test_adc.py  test_gpio.py  test_pwm.py  test_uart.py
lial-host/lial_commands/: __init__.py  download.py  init.py
lial-host/tests/: conftest.py  test_board_registry.py  test_download.py  test_flash_backends.py  test_generate_manifest.py  test_init_flow.py
lial-pulse-driver/: Cargo.toml
lial-receiver/: Cargo.toml  lial_std.h  release-manifest.json
lial-receiver/.cargo/: config.toml
lial-receiver/src/: embedded_hal_adapter.rs  esp32c3.rs  executor.rs  executor_dual.rs  lial_std.rs  lib.rs  link.rs  main.rs  manifest.rs  mock.rs  rp2040.rs  transport.rs  transport_wifi.rs  validation.rs
lial-receiver/tests/: adapter_integration.rs  integration.rs
patches/wasmi/: .cargo_vcs_info.json  Cargo.toml
patches/wasmi/src/: linker.rs  reftype.rs
patches/wasmi/src/engine/: mod.rs
patches/wasmi/src/func/: into_func.rs  mod.rs
patches/wasmi/src/instance/: builder.rs  mod.rs
patches/wasmi/src/module/: builder.rs  data.rs  init_expr.rs  mod.rs
patches/wasmi/src/store/: inner.rs  mod.rs
patches/wasmi/tests/integration/: host_call_instantiation.rs
patches/wasmi_collections/: .cargo_vcs_info.json  Cargo.toml
patches/wasmi_collections/src/string_interner/: detail.rs
patches/wasmi_core/: .cargo_vcs_info.json  Cargo.toml
patches/wasmi_core/src/: fuel.rs  func_type.rs
patches/wasmparser/: Cargo.toml
patches/wasmparser/src/: resources.rs  validator.rs
patches/wasmparser/src/validator/: component_types.rs  core.rs  types.rs
prompts/: system_prompt.txt
receiver/: Cargo.toml  build.rs  milo_std.h  release-manifest.json
receiver/.cargo/: config.toml
receiver/src/: lib.rs  main.rs
receiver/src/engine/: executor.rs  executor_dual.rs  executor_threaded.rs  link.rs  manifest.rs  mod.rs  signing.rs  validation.rs
receiver/src/hal/: adapter.rs
receiver/src/targets/: mod.rs
receiver/src/targets/esp32c3/: mod.rs
receiver/src/targets/mock/: mod.rs
receiver/src/targets/rp2040/: mod.rs
receiver/src/targets/sim/: mod.rs
receiver/src/transport/: mod.rs  wifi.rs
receiver/tests/: adapter_integration.rs  integration.rs
scripts/: generate_manifest.py
